objects/qbdialer__SeekInitiativeItem__c.object
<CustomObject>
    <fields>
        <fullName>qbdialer__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Seek Initiative Items</relationshipLabel>
        <relationshipName>Seek_Initiative_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Seek Initiative Items</relationshipLabel>
        <relationshipName>Seek_Initiative_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__DialerQueryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dialer Query</label>
        <referenceTo>qbdialer__DialerQuery__c</referenceTo>
        <relationshipLabel>Seek Initiative Items</relationshipLabel>
        <relationshipName>Seek_Initiative_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__LeadId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Seek Initiative Items</relationshipLabel>
        <relationshipName>Seek_Initiative_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__SeekInitiativeId__c</fullName>
        <label>Seek Initiative</label>
        <referenceTo>qbdialer__SeekInitiative__c</referenceTo>
        <relationshipLabel>Seek Initiative Items</relationshipLabel>
        <relationshipName>Seek_Initiative_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>qbdialer__Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Seek Initiative Item</label>
    <listViews>
        <fullName>qbdialer__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>SeekInitiativeItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seek Initiative Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>